Changed thumbnail and hyperlinked our datasets

--- a/data.qmd
+++ b/data.qmd
@@ -8,17 +8,13 @@ editor:
     wrap: 72
 ---
 
-![](images/data-import-cheatsheet-thumbs.png)
+![](images/data_page_thumbnail.png)
 
 # Data Background
 
 ## Data Set 1: Child Opportunity Index
 
-Link:
-https://data.diversitydatakids.org/dataset/coi20-child-opportunity-index-2-0-database
-The Child Opportunity Index 2.0 (COI 2.0) is a comprehensive tool
-developed in collaboration with the Kirwan Institute for the Study of
-Race and Ethnicity at Ohio State University, released in January 2020.
+The [Child Opportunity Index 2.0] (https://data.diversitydatakids.org/dataset/coi20-child-opportunity-index-2-0-database) (COI 2.0) is a comprehensive tool developed in collaboration with the Kirwan Institute for the Study of Race and Ethnicity at Ohio State University, released in January 2020.
 It measures neighborhood-level resources and conditions essential for a
 child's healthy development across the United States. The COI is a
 composite index of child's neighborhood opportunity that contains data
@@ -38,7 +34,7 @@ health, education, and life expectancy.
 
 ### Simplified Data Dictionary
 
-| Variable | Description                                                     |
+| Abbreviation | Description                                                     |
 |---------------------------------------|---------------------------------|
 | ED       | Education Domain                                                |
 | HE       | Health and Environment Domain                                   |
@@ -53,11 +49,7 @@ health, education, and life expectancy.
 
 ## Data Set 2: Raw Indicator Values
 
-Link:
-https://data.diversitydatakids.org/dataset/coi20-child-opportunity-index-2-0-database/resource/44ee1ea6-a3df-4af3-93b7-c4695d5ab6a6
-
-The component indicators data for COI 2.0 is a comprehensive collection
-of demographic data and raw indicator values from the American Community
+The [component indicators data](https://data.diversitydatakids.org/dataset/coi20-child-opportunity-index-2-0-database/resource/44ee1ea6-a3df-4af3-93b7-c4695d5ab6a6) for COI 2.0 is a comprehensive collection of demographic data and raw indicator values from the American Community
 Survey (ACS) covering the years 2010 and 2015, correlating to the ACS
 5-year data from 2008-12 and 2013-17 respectively. Most of the data
 points related to geographical and demographic information are
@@ -72,11 +64,9 @@ Opportunity Index.
 
 ## Data Set 3: Child Population Data
 
-Link:
-https://data.diversitydatakids.org/dataset/coi20-child-opportunity-index-2-0-database/resource/44ee1ea6-a3df-4af3-93b7-c4695d5ab6a6
 
-The “Child population data - Number of children aged 0-17 years by
-race/ethnicity from the American Community Survey” uses Census data to
+The [“Child population data - Number of children aged 0-17 years by
+race/ethnicity from the American Community Survey”](https://data.diversitydatakids.org/dataset/coi20-child-opportunity-index-2-0-database/resource/44ee1ea6-a3df-4af3-93b7-c4695d5ab6a6) uses Census data to
 describe the demographic of a micro regional area, including whether the
 area is one of the 100 largest metro areas in the U.S. The data set
 includes the racial composition of the area broken down by proportions
