--- a/analysis.qmd
+++ b/analysis.qmd
@@ -34,9 +34,15 @@ indicators include employment rate, high skill employment, home
 ownership, housing vacancy rate, median house income, poverty rate, and
 public assistant rate.
 
-# Key Indicators of SE Factors in Northeast Region  
+# Social and Economic Factors
+
+## Key Indicators of SE Factors in Northeast Region
 
 ![](images/clipboard-2311506481.png)
+
+## Key Indicators of SE Factors in South Region
+
+![](images/clipboard-931929066.png)
 
 Based on the distributions, high skill employment is the most normal.
 This indicates a moderate level of high skilled employment across the
@@ -47,90 +53,94 @@ socioeconomic challenges. A skewed distribution such as employment rate
 stands out as a variable that heavily impacts the z-score. Employment
 rate is skewed to the left. The distribution suggests that a significant
 proportion of the population is employed and the Northeast region has a
-robust economy. This aligns with our Distribution by Average z-score by
-Region table which shows Northeast with the highest scores.
+robust economy. Although poverty rate, housing vacancy rate, and public
+assistant rate are skewed right shows that most areas in the Northeast
+have low instances of these cases. This aligns with our Distribution by
+Average z-score by Region table which shows Northeast with the highest
+scores.
 
-However, the concentration of employment could also suggest challenges
-for unemployed individuals, potentially leading to issues such as income
-inequality. This is evident in the right skewed distribution of the
-median housing income graph. It shows that most of the population earns
-a lower income. Despite the fact that poverty rate, housing vacancy
-rate, and public assistant rate are skewed right, this actually shows
-that most areas in the Northeast have low instances of these cases. This
-supports the idea that the Northeast is a socially and economically
-strong. To get a deeper understanding of which of these variables have
-the greatest impact on z-scores, we will be comparing the t-stats.
+The South region follows the same pattern as the Northeast region. From
+analyzing the employment rate visual, the concentration of employment
+could also suggest challenges for unemployed individuals. This could
+potentially lead to issues such as income inequality. This is evident in
+the right skewed distribution of the median housing income graph. It
+shows that most of the population earns a lower income. This could be
+the reason the South region has a significantly lower z-score than the
+Northeast.
 
-T STATS
+In order to determine which variable has the highest impact on the
+dependent variable (z_COI_nat), we decided to run a regression to
+examine the magnitude of the coefficients. The larger the absolute value
+of the coefficient, the stronger the impact of that variable on the
+dependent variable, holding other variables constant. Looking at the
+coefficients, the variable `employ_rate` has the largest (absolute
+value) coefficient, with an estimate of 8.193e-04. This suggests that
+for every unit increase in the employment rate, the z_COI_nat increases
+by approximately 8.193e-04 units, assuming all other variables remain
+constant. Additionally, `med_house_income` also has a substantial
+coefficient (1.676e-07), indicating that for every unit increase in
+median household income, the z_COI_nat increases by approximately
+1.676e-07 units, holding other variables constant. This confirms our
+interpretations of the histograms for why Northeast has the highest
+z-scores and why South has the lowest.
 
-# Key Indicators of SE Factors in South Region
+## Scale Location Model for Weighted Average of Social and Economic Domain z-scores, Nationally Normed
 
-![](images/clipboard-516353454.png)
+![](images/clipboard-434729416.png)
 
-The South region follows an identical pattern to that of the Northeast.
+Residuals vs Fitted Plot: This plot helps to check the assumption of
+linearity and homoscedasticity in a regression model. Ideally, the
+residuals will be randomly distributed to indicate a good model fit.
+Here, the residuals seem to be relatively evenly distributed around the
+horizontal line, but a slight fan shape suggests potential
+heteroscedasticity, where the variance of the residuals increases as the
+fitted values increase.
 
-# Scale Location Model for Weighted Average of Social and Economic Domain z-scores, Nationally Normed
+Normal Q-Q Plot: This plot is used to check the normality of residuals.
+The points should lie approximately along the reference line if the
+residuals are normally distributed. In this plot, most points align well
+with the line except for a slight deviation at the tails. This suggests
+that the residuals are mostly normal but with some possible deviations
+from normality at the extremes.
 
-![](images/clipboard-1078409640.png)
+Scale-Location Plot: Similar to the first plot, this one also checks for
+homoscedasticity by plotting the square roots of the standardized
+residuals against the fitted values. The relatively constant spread
+across the range of fitted values suggests that variance is fairly
+constant (homoscedasticity), although, like the Residuals vs Fitted
+plot, there appears to be a slight increase in spread for higher fitted
+values. Another similarity is the presence of outliers, which suggest
+atypical levels of heteroscedasticity for those points.
 
-This chart is a scale-location plot, typically used in regression
-analysis to assess the assumption of homoscedasticity, which is that the
-variances of the residuals are constant across all levels of the
-independent variables. The y-axis represents the square root of the
-standardized residuals from a regression model, highlighting how
-residuals deviate from their mean. The x-axis is the predicted values
-obtained from the regression model.
+Cook's Distance Plot: This plot shows the influence of each observation
+on the fitted values. Observations with a Cook's distance much larger
+than others can be considered influential to the model. Here, all
+observations have relatively low Cook's distances, suggesting that no
+single observation is overly influential. Overall, the model shows a
+reasonable fit with some signs of potential heteroscedasticity and
+slight deviations from normality at the extremes. The lack of
+influential outliers is a good sign for the robustness of the model.
 
-Ideally, the red line is flat and the residuals are evenly distributed
-around zero as it indicates constant variance. In this plot, the red
-line is fairly flat, suggesting that the variance of the residuals might
-be relatively constant. Most residuals are clustered near zero,
-especially around the center of the distribution of fitted values,
-meaning the model is making accurate predictions on average. However,
-the spread of residuals increases slightly for higher fitted values,
-suggesting potential issues with variance in these areas.
+# Education Domain Factors
 
-The model shows a reasonable level of homoscedasticity as indicated by
-the mostly flat trend in the red line across the range of fitted values.
-However, the presence of potential outliers suggests that there may be a
-few instances that don't follow the typical pattern or levels of
-heteroscedasticity.
+## Key Indicators of ED Factors in Northeast Region
 
-The histograms below display the key indicators of the education domain
-in the Northeast and South region. These indicators include adult
-education attainment, AP enrollment, college enrollment, early child
-enrollment, early childhood education centers, high quality early
-childhood education centers, high school graduation rate, 3rd grade math
-proficiency, 3rd grade reading proficiency, and school poverty.
+## ![](images/clipboard-764707238.png)Key Indicators of ED Factors in South Region
 
-# Key Indicators of ED Factors in Northeast Region 
+## ![](images/clipboard-123417509.png)Residuals vs Fitted for Weighted Average of Education Domain z-scores, Nationally Normed
 
-![](images/clipboard-764707238.png)
+![](images/clipboard-1640644644.png)
 
-# Key Indicators of ED Factors in South Region
+# Health and Environment Factors
 
-![](images/clipboard-2045926496.png)
-
-# Residuals vs Fitted for Weighted Average of Education Domain z-scores, Nationally Normed
-
-![](images/clipboard-1414671202.png)
-
-Finally, the distribution key indicators of the health and environment
-domain in the Northeast and South region are visualized. These
-indicators include airborne microparticles, food access, green space
-access, health insurance, extreme heat exposure, and industrial
-pollutants in air, water, or soil.
-
-# Key Indicators of HE Factors in Northeast Region  
+## Key Indicators of HE Factors in Northeast Region
 
 ![](images/clipboard-2549282257.png)
 
-# Key Indicators of HE Factors in South Region
+## Key Indicators of HE Factors in South Region
 
-![](images/clipboard-1486635107.png)
-
-# Histogram of Residulas Model for Weighted Average of Health and Environment Domain z-scores, Nationally Normed
+## ![](images/clipboard-2315424768.png)Histogram of Residuals Model for Weighted Average of Health and Environment Domain z-scores, Nationally Normed
 
 ------------------------------------------------------------------------
 
-![](images/clipboard-1224731097.png)
+![](images/clipboard-3670613666.png)
